@@ -51,3 +51,19 @@ docker-compose up -d mvncont
 ```yaml
 docker exec -it repos-maven /bin/bash
 ```
+
+### once you are inside the container, execute the next command line
+```shell 
+./docker-entrypoint.sh
+```
+
+### entry points
+```shell 
+#!/bin/bash
+
+echo 'Running docker entry point'
+echo 'Changing permissions to '$SITE_DIR_NAME
+chmod ugo+w $SITE_DIR_NAME
+mv ./settings.xml /etc/maven/
+export MAVEN_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
+```
